# DROMA_Py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGE_STATUS.md  PUBLISHING_GUIDE.md  README.md  pyproject.toml
API_readme/: droma_py_api_reference.md
Others/: script.py
examples/: basic_usage.py  batch_processing.py  data_analysis.py  name_harmonization.py
src/droma_py/: __init__.py  data.py  database.py  exceptions.py  extract_sql.py  harmonization.py  management.py
